# noir-stellar-app

./: .gitignore  README.md
1-noir-circuit/eth_price_circuit/: Nargo.toml  README.md  test.sh
1-noir-circuit/eth_price_circuit/src/: main.nr
2-oracle-server/: .gitignore  README.md  netlify.toml  nodemon.json  package-lock.json  package.json  tsconfig.json
2-oracle-server/netlify/functions/: api.d.ts  api.d.ts.map  api.js  api.js.map  api.ts
2-oracle-server/src/: index.ts
2-oracle-server/src/api/: index.ts
3-soroban-verifier/: Cargo.toml  README.md
3-soroban-verifier/src/: lib.rs
guess-game/: README.md
guess-game/circuits/: Nargo.toml
guess-game/circuits/src/: main.nr
guess-game/contracts/: Cargo.toml  README.md
guess-game/contracts/contracts/guess-game/: Cargo.toml
guess-game/contracts/contracts/guess-game/src/: lib.rs  test.rs
guess-game/contracts/contracts/guess-game/test_snapshots/test/: test_claim_fails_invalid_proof.1.json  test_game_flow.1.json  test_initialization.1.json
guess-game/contracts/contracts/zk-verifier/: Cargo.toml
guess-game/next-app/: package-lock.json  package.json
