[package]
name = "guess-game"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-poseidon = { workspace = true }
ultrahonk_verifier = { package = "ultrahonk_rust_verifier", git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", rev = "2a73c4ba", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
